--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
@@ -112,6 +112,7 @@
             overflow-x: auto;
             width:100%;
           }
+          >.mb-element{padding-top:$space/2}
         }
       }
     }
