--- a/src/Mapbender/WmsBundle/Resources/views/ElementAdmin/dimensionshandler.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/ElementAdmin/dimensionshandler.html.twig
@@ -12,9 +12,9 @@
     <span>{{ "mb.wms.dimensionsets.no_dimension" | trans }}</span>
     {% endif %}
 </div>
-<!--script type="text/javascript" src="{{ asset('bundles/mapbendercore/vendor/joii.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('bundles/mapbendercore/vendor/joii.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/mapbender.wms.dimension.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/mapbenderwms/backend/dimensionshandler.js') }}"></script-->
+<script type="text/javascript" src="{{ asset('bundles/mapbenderwms/backend/dimensionshandler.js') }}"></script>
 <script type="text/javascript">
 $('.collectionItem select[data-dimension-group]', $('.collectionAdd').parent()).each(function(idx, item){
     dimHandler.initSlider($(item), null);
