--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -4,7 +4,11 @@
       <span class="layer-spinner"></span>
       <span class="layer-state"></span>
       <span class="iconFolder left" title="{{ 'mb.core.layertree.tooltip.sublayers_openclose'|trans }}"></span>
-      <div class="checkWrapper left iconCheckbox" title="{{ 'mb.core.layertree.label.visibility_onoff' | trans  }}">
+      <div class="checkWrapper left iconCheckbox sourceVisibilityWrapper" title="{{ 'mb.core.layertree.label.sourcevisibility_onoff' | trans  }}">
+        <input class="layer-selected checkbox" type="checkbox" name="sourceVisibility">
+      </div>
+      <div class="left iconOk selectAll" title="{{ 'mb.core.layertree.label.allvisibility_on' | trans  }}"></div>
+      <div class="checkWrapper left iconCheckbox selectedWrapper" title="{{ 'mb.core.layertree.label.visibility_onoff' | trans  }}">
         <input class="layer-selected checkbox" type="checkbox" name="selected">
       </div>
       <div class="checkWrapper left iconInfo featureInfoWrapper" title="{{ 'mb.core.layertree.label.featureinfo_onoff' | trans  }}">
