--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/basesourceswitcher.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/basesourceswitcher.html.twig
@@ -5,6 +5,8 @@
   <div class="clearContainer"></div>
   {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
   <div class="clearContainer"></div>
+  {{ form_label(form.configuration.display) }}{{ form_widget(form.configuration.display) }}
+  <div class="clearContainer"></div>
   {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
   <div class="clearContainer"></div>
 
