--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
@@ -14,6 +14,7 @@
 .icon{
   text-decoration: none;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-family: 'FontAwesome';
 
   // some resets
@@ -22,12 +23,49 @@
   width: auto;
   height: auto;
   vertical-align: top;
+  &:before {
+    font-family: FontAwesome;
+  }
 }
-.iconBig{
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'mapbender-icons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  text-decoration: none;
+
+  // some resets
+  width: auto;
+  height: auto;
+//  vertical-align: top;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: 'mapbender-icons' !important;
+}
+
+.iconBig {
   line-height: 20px;
-  &:before{
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 23px;
+  //  height: 20px;
+  &:before {
     font-family: FontAwesome;
     font-size: 20px;
+    margin-top: -1px;
+    margin-left: -23px;
+    margin-bottom: -2px;
+    position: absolute;
+    display: block;
   }
 }
 
@@ -44,34 +82,7 @@
   100%{transform:rotate(359deg)}
 }
 
-//
-// WATCHOUT:
-// firefox doesn't like the above 'icon' class selector.
-// So we choose here the ugly way...
-// What what in the butt... XD
-//
-.iconCheckboxActive, .iconCheckboxHalf, .iconCheckbox,
-.iconRadio, .iconRadioActive, .iconView, .iconHelp,
-.iconLinkButton, .iconDown, .iconRight, .iconLeft,
-.iconTop, .iconExpand, .iconExpandClosed, .iconMove,
-.iconAbout, .iconPrint, .iconGps, .iconLayertree,
-.iconLegend, .iconInfo, .iconInfoActive, .iconSearch,
-.iconWms, .iconOpen, .iconClose, .iconActivity,
-.iconCoordinates, .iconPrev, .iconNext, .iconZoomSelect,
-.iconZoomMin, .iconZoomIn, .iconZoomOut, .iconZoomLevel,
-.iconZoomLevelSelected, .iconAreaRuler, .iconFolder,
-.iconFolderActive, .iconTarget, .iconGroup, .iconAdd,
-.iconRemove, .iconOk, .iconEdit, .iconPublish,
-.iconPublishActive, .iconAppDefault, .iconCancel,
-.iconThumbsUp, .iconThumbsDown, .iconGroup, .iconUser,
-.iconSettings, .iconSignOut, .iconSignIn, .iconMore,
-.iconCopy, .iconKey, .iconWarning, .iconWarningCcl,
-.iconWarningSmpl, .iconEmail, .iconTwitter,
-.iconFacebook, .iconGooglePlus, .iconSketch, .iconMenu,
-.iconOverview, .iconGpsTarget, .iconClock, .iconFile,
-.iconBolt, .iconStarO, .iconBars, .iconFileText {
-  &:before{font-family: FontAwesome;}
-}
+
 
 // all
 .iconCheckboxActive:before{content:"\f046" !important;} // overwrite the default icon if checked
@@ -160,3 +171,50 @@
 .iconKey:before{content:"\f084";}
 .iconTab:before{content:"\f114";}
 .iconTabActive:before{content:"\f07b" !important;}
+
+
+/**
+* New icon font from iconmoon service
+*/
+@font-face {
+  $iconsPath: $iconBasePath +'/icons/icomoon';
+  font-family: 'mapbender-icons';
+  src: url($iconsPath +'.eot?-dwa3cy');
+  src: url($iconsPath +'.eot?#iefix-dwa3cy') format('embedded-opentype'),
+  url($iconsPath + '.woff?-dwa3cy') format('woff'),
+  url($iconsPath + '.ttf?-dwa3cy') format('truetype'),
+  url($iconsPath + '.svg?-dwa3cy#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.icon-layer-tree:before {
+  content: "\e607";
+}
+
+.icon-feature-info:before {
+  content: "\e608";
+}
+
+.icon-area-ruler:before {
+  content: "\e600";
+}
+
+.icon-polygone:before {
+  content: "\e601";
+}
+
+.icon-line-ruler:before {
+  content: "\e602";
+}
+
+.icon-image-export:before {
+  content: "\e603";
+}
+
+.icon-legend:before {
+  content: "\e604";
+}
+
+.icon-about:before {
+  content: "\e605";
+}
