fixing icons loading, error at layertree

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -64,6 +64,7 @@
     @include opacity(.7);
     @extend .iconActivity;
     &:before{
+      font-family: 'FontAwesome';
       -webkit-animation:spin 1s linear infinite;
       -moz-animation:spin 1s linear infinite;
       animation:spin 1s linear infinite;
@@ -74,6 +75,7 @@
     @extend .iconWarning;
     .layer-title{color:$errorColor !important;}// if error, overwrite the title color
     &:before{
+      font-family: 'FontAwesome';
       color:$errorColor;
       @include absolute('' $space*2 '' '');
     }
