--- a/src/Mapbender/WmsBundle/Resources/public/sass/element/dimensionshandler.scss
+++ b/src/Mapbender/WmsBundle/Resources/public/sass/element/dimensionshandler.scss
@@ -3,15 +3,18 @@
 @import "modules/text";
 @import "modules/input";
 
+.mb-element-dimensionshandler {
+    width:150px;
+    display:inline-block;
+}
 .mb-element-dimensionshandler{
     .dimensionset{
         position: relative;
         padding: 0 $space/4 0 $space/4;
+        text-align:center;
     }
 /*    .dimensionset-title{ }*/
     .dimensionset-value{
-        position: absolute;
-        padding-right: $space/4;
         right: 0px;
     }
 }
