--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertheme.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertheme.html.twig
@@ -1,6 +1,6 @@
 <div id="{{form.configuration.themes.vars.id}}" class="collectionItem">
     {{ form_widget(theme.id) }}
-    <div class="collectionItemProperty">
+    <div class="collectionItemProperty" title="{{"mb.core.admin.layertree.label.theme.label"|trans}}">
         <label class="labelInput">{{ theme.vars.data.title }}</label>{{ form_widget(theme.title) }}
     </div>
     <div class="collectionItemProperty item-activate" title="{{"mb.core.admin.layertree.label.theme.useTheme"|trans}}">
