--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/confirmdelete.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/confirmdelete.html.twig
@@ -1,3 +1,3 @@
-ww<form method="POST" action="{{ url( "mapbender_manager_repository_delete",{"sourceId": source.id}) }}" >
+<form method="POST" action="{{ url( "mapbender_manager_repository_delete",{"sourceId": source.id}) }}" >
     <input type="hidden" name="sourceId" value="{{source.id}}"  />
 </form>
