add digitizer element

--- a/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
+++ b/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
@@ -1,3 +1,5 @@
 <div id="{{ id }}" class="mb-element mb-element-digitizer" title="{{ title|trans }}">
-    TEST
+    <div id="digitizer-results">
+        
+    </div>
 </div>
