--- a/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
+++ b/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
@@ -1,3 +1,32 @@
 @import "libs/variables";
 @import "libs/mixins";
 
+.mb-element-digitizer{
+    select{
+        padding: 4px;
+        width: 100%;
+        display:block;
+        option{
+            font-weight: bold;
+        }
+    }
+    
+    button{
+        font-weight: bold;
+        border: 2px solid #c0c0c0;
+        color: $firstColor;
+        border-radius: $radius;
+        &.active{
+            background-color: #000;
+            color: #fff;
+        }
+    }
+}
+
+.olHandlerBoxSelectFeature {
+    background-color: white;
+    border: 2px solid blue;
+    font-size: 1px;
+    opacity: 0.5;
+    position: absolute;
+}
