refactor digitizer.html.twig

--- a/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
+++ b/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
@@ -1,5 +1,5 @@
 <div id="{{ id }}" class="mb-element mb-element-digitizer" title="{{ title|trans }}">
-    <div id="digitizer-results">
-        
-    </div>
+    <select class="selector"></select>
+    <div class="tool-set"></div>
+    <div class="results"></div>
 </div>
