--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -40,9 +40,11 @@
     [class^="icon"]:before,[class*=" icon"]:before{font-size: 14px;}
     padding:$space/4 $space/2 $space/4 $space/2;
     .toolBarItem{
-      height:30px;
-      line-height:30px;
-      font-size:90%;
+//      height:30px;
+//      line-height:30px;
+//      font-size:90%;
+      vertical-align: middle;
+      font-size:80%;
       padding:5px;
       display: inline-block;
     }
