fix open sans font displaying and layer tree nodes

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -87,6 +87,7 @@
   }
   .checkWrapper{
     position: relative;
+    height: 12px;
   }
   .checkWrapper.sourceVisibilityWrapper:before{
     content: "\f10c";
