--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -1,7 +1,7 @@
 @import "libs/variables";
 @import "libs/mixins";
-@import "libs/normalize";
-@import "libs/icons";
+//@ import "libs/normalize";
+//@ import "libs/icons";
 
 @import "modules/base";
 @import "modules/layout";
