--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/result_table.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/result_table.scss
@@ -1,9 +1,33 @@
-@import "libs/variables";
-@import "libs/mixins";
-@import "modules/base";
-@import "modules/button";
-
 .mapbender-element-result-table {
+
+  /* result table */
+  table[role="grid"] > tbody > tr {
+    > td {
+      vertical-align: middle;
+      padding-top: 4px;
+      padding-bottom: 4px;
+
+      &.selection{
+        vertical-align: middle;
+      }
+
+      &.buttons {
+        padding: 2px;
+        text-align: center;
+        > div.button-navigation {
+          white-space: nowrap;
+          float: right;
+          > button {
+            padding-bottom: 0px;
+            padding-left: 5px;
+            padding-right: 5px;
+            margin-left: 2px;
+          }
+        }
+      }
+    }
+  }
+
   .dataTables_wrapper {
     > table {
       > thead > tr > th {
