--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -1,7 +1,7 @@
 @import "libs/variables";
 @import "libs/mixins";
 @import "theme/mapbender3";
-
+@import "../fonts/opensans_regular_macroman/stylesheet";
 @import "../regional/vendor/normalize.3.0.1";
 @import "../regional/vendor/bootstrap/3.2.0/css/bootstrap_base";
 
