--- a/src/Mapbender/WmsBundle/Resources/public/sass/element/dimensionshandler.scss
+++ b/src/Mapbender/WmsBundle/Resources/public/sass/element/dimensionshandler.scss
@@ -5,7 +5,10 @@
 
 .mb-element-dimensionshandler {
     width:150px;
-    display:inline-block;
+    //display:block;
+    height: 30px;
+    //top: 1px;
+    //margin-top: -10px;
 }
 .mb-element-dimensionshandler{
     .dimensionset{
