--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/popup_dialog.scss
@@ -143,7 +143,7 @@
 
   > .modal-body {
     /** Dialog resizing fix */
-    padding: 0;
+//    padding: 0;
     width: auto !important;
     overflow: auto;
   }
