--- a/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
+++ b/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizer.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element mb-element-digitizer" title="{{ title|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-digitizer modal-body" title="{{ title|trans }}">
     <select class="selector"></select>
     <div class="tool-set"></div>
     <div class="results"></div>
