--- a/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
+++ b/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
@@ -2,6 +2,9 @@
 @import "libs/mixins";
 
 .mb-element-digitizer{
+   
+    padding:0;
+   
     select{
         padding: 4px;
         width: 100%;
@@ -9,18 +12,24 @@
         option{
             font-weight: bold;
         }
+        margin-bottom: 10px;
     }
     
     button{
-        font-weight: bold;
-        border: 2px solid #c0c0c0;
-        color: $firstColor;
-        border-radius: $radius;
-        &.active{
+        margin-right: 2px;
+        margin-top: 2px;
+        &.active,
+        &.active:focus
+        {
             background-color: #000;
-            color: #fff;
         }
     }
+    
+    .mapbender-element-result-table{
+        margin-top: 10px;
+    }
+    
+    
 }
 
 .olHandlerBoxSelectFeature {
