--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -1,9 +1,10 @@
 @import "libs/variables";
-@import "libs/mixins";
-@import "theme/mapbender3";
-@import "../fonts/opensans_regular_macroman/stylesheet";
 @import "../regional/vendor/normalize.3.0.1";
+@import "libs/mixins";
+@import "libs/icons";
+@import "../fonts/opensans_regular_macroman/stylesheet";
 @import "../regional/vendor/bootstrap/3.2.0/css/bootstrap_base";
+@import "theme/mapbender3";
 
 @import "element/popup_dialog";
 @import "element/tab_navigator";
