fix popupDialog resizing

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/popup_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/popup_dialog.scss
@@ -28,6 +28,11 @@
 /* jQuery UI Dialog with Bootstrap classes */
 .mb-element-popup-dialog {
 
+  > *{
+    box-sizing: content-box !important;
+  }
+
+
   $borderRadius: 0px;
   z-index: 22;
   position: absolute !important;
