remove scroll from html body in fullscreen.scss

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -10,6 +10,9 @@
 @import "element/tab_navigator";
 @import "element/result_table";
 
+body{
+  overflow: hidden;
+}
 
 /*
   Override bootstrap standard declaration
