--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
@@ -1,4 +1,3 @@
-//$iconBasePath "bundles/mapbendercore/fonts";
 @font-face {
   font-family: 'FontAwesome'; //v.3.0.1
   src: url($iconBasePath + '/fontawesome-webfont.eot?');
@@ -172,7 +171,9 @@
 .iconKey:before{content:"\f084";}
 .iconTab:before{content:"\f114";}
 .iconTabActive:before{content:"\f07b" !important;}
-
+.iconReset:before{content:"\f021";}
+.iconPlay:before{content: "\f04b";}
+.iconStop:before{content: "\f04d";}
 
 /**
 * New icon font from iconmoon service
