--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -170,3 +170,37 @@ $pageWidth:$contentPaneWidth + $navWidth;
     text-align:right;
   }
 }
+
+.icon[data-state]{
+  cursor: default;
+  opacity:1;
+}
+.icon[data-state="running"]{
+  @extend .iconActivity;
+  &:before{
+    -webkit-animation:spin 1s linear infinite;
+    -moz-animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;
+  }
+}
+.icon[data-state="error"]{
+  @extend .iconBolt;
+  &:before{
+    color:$errorColor;
+  }
+}
+.icon[data-state="success"]{
+  @extend .iconOk;
+}
+[data-state="waiting"]{
+  @extend .iconClock;
+}
+.icon[data-state="aborted"]{
+  @extend .iconWarning;
+  &:before{
+    color:$errorColor;
+  }
+}
+.icon[data-state="new"]{
+  @extend .iconFile;
+}
