--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/featureinfo.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/featureinfo.html.twig
@@ -19,6 +19,10 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.displayType) }}{{ form_widget(form.configuration.displayType) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.width) }}{{ form_widget(form.configuration.width) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.height) }}{{ form_widget(form.configuration.height) }}
+    <div class="clearContainer"></div>
     <div class="left">
         {{ form_widget(form.configuration.showOriginal) }}<label for="{{form.configuration.showOriginal.vars.id}}" class="labelCheck">{{ "mb.core.admin.featureinfo.label.showoriginal"|trans }}</label>
     </div>
