--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -57,7 +57,7 @@ body{
     color: #555;
     font-size: 11px;
     border: solid 1px #c8c8c8;
-    background-color: #ffffff;
+//    background-color: #ffffff;
     border-radius: 0;
     padding: 2px 7px;
     height: 29px;
