--- a/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
+++ b/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
@@ -6,6 +6,7 @@
     padding:0;
    
     select{
+        background-color: #fff;
         padding: 4px;
         width: 100%;
         display:block;
