--- a/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
+++ b/src/Mapbender/DigitizerBundle/Resources/public/sass/element/digitizer.scss
@@ -36,6 +36,9 @@
                 &.hover td{
                     background-color: #F7F79A;
                 }
+                &:hover td{
+                    background-color: #F7F79A;
+                }
             }
         }
     }
