fix bottom pane

--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -52,6 +52,9 @@
       display: inline-block;
       text-wrap: avoid;
       white-space: nowrap;
+      > label{
+        margin-bottom: 0;
+      }
     }
 
     .dropdownList{
