--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -44,11 +44,14 @@
                 <div>
                     <label class="labelInput" for="rotation">{{ 'mb.core.printclient.label.rotation' | trans }}</label>
                     <input class="input" type="text" name="rotation"/>
-                    <div id="slider"></div>
                 </div>
                 <div class="clearContainer"></div>
                 <div id="extra_fields"></div>
                 <div class="clearContainer"></div>
+                <div class="checkWrapper left iconCheckbox iconCheckboxActive " data-icon="iconCheckbox">
+                    <input class="checkbox" type="checkbox" name="printLegend" value="1" checked="checked">
+                </div>
+                <label class="labelCheck">Legende drucken</label>
                 <div id="layers"></div>
                 <input type="submit" style="display: none"/>
                 <div class="clearContainer"></div>
