--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -51,7 +51,7 @@
                 <div class="checkWrapper left iconCheckbox iconCheckboxActive " data-icon="iconCheckbox">
                     <input class="checkbox" type="checkbox" name="printLegend" value="1" checked="checked">
                 </div>
-                <label class="labelCheck">Legende drucken</label>
+                <label class="labelCheck">{{ 'mb.core.printclient.label.legend' | trans }}</label>
                 <div id="layers"></div>
                 <input type="submit" style="display: none"/>
                 <div class="clearContainer"></div>
