fix displaying content  of tab navigator

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -178,6 +178,11 @@ body{
       background-color: darken($mainColor,10%);
     }
   }
+
+  // Tab-Navigator
+  .tab-content.ui-tabs-panel{
+    overflow: visible;
+  }
 }
 
 
