--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -14,6 +14,7 @@
 @import "modules/checkbox";
 @import "modules/radiobutton";
 @import "modules/dropdown";
+@import "modules/dateselector";
 
 /* ------------------------------------------------------------- MISC */
 .mb-hiddenCheckbox{
