add fieldSet style declaration

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -183,6 +183,16 @@ body{
   .tab-content.ui-tabs-panel{
     overflow: visible;
   }
+
+  fieldset {
+    margin-left: -15px;
+    .checkbox,
+    .radio,
+    > .form-group {
+      display: inline-block;
+      padding-left: 15px;
+    }
+  }
 }
 
 
