--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -8,6 +8,7 @@ $headPatternUrl: $imageBasePath + "/head.png";
 //------------------------------------------------------------------font
 $fontFamily: "open_sansregular", "Calluna Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 $fontSize:13px;
+$uiFontSize: 11px;
 
 //-----------------------------------------------------------------other
 $lineHeight:21px;
